--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta name="apple-mobile-web-app-status-bar-style" content="#0d0d0f">
 
-    <title>Vite + React + TS</title>
+    <title>Ayodeji Moses Odukoya + Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
